# Bachelor

./: .gitignore  README.md
TDAT3025 - Maskinlære/1 - Linear Regression/: oppgave_a.py  oppgave_b.py
TDAT3025 - Maskinlære/2 - Atrificial neural network/: Oppgave_c.py  Oppgave_d.py  d_results_  mnist.py
TDAT3025 - Maskinlære/3 - Convolutional neural network/: nn_sequential_a.py  nn_sequential_c.py  nn_sequential_d.py
Year 1/TDAT1001 - Intro to Programming/07 - tables of primitive data types & collaboration between objects/: Smiley.java  Temperaturer.java
Year 1/TDAT1001 - Intro to Programming/08 - Working with Java-API/: NyString.java  Tekstbehandling.java  Test.java
Year 1/TDAT1001 - Intro to Programming/09 - Collaboration between objects/: ArbTaker.java  Oppgave1.java  Person.java
Year 1/TDAT1001 - Intro to Programming/10 - Tables of objects/: KlientprogramForOppgaveoversikt.java  Oppgaveoversikt.java  Student.java
Year 1/TDAT1004 - Mathematics 1/: Matteeksamen.xlsx
Year 1/TDAT1005 - Databases and Advanced Programming/: Database notes.docx  Databaser kontrollspørsmål.docx
Year 1/TDAT1006 - System Development 1 with Web Applications/: Exam_Practise.docx  Exam_practise.xlsx  UML_Notes.docx
Year 2/TDAT2002 - Mathematics 2/: Exam_questions.pptx
Year 2/TDAT2003 - System Development 2 with Web Applications/: Personaer.docx  Reflection_note.docx  Systemutvikling2MMi.xlsx  Øving 10.docx
Year 3/TDAT3020 - Software and Network Security/02 - Introduction/buggy-web-server/: CMakeLists.txt
Year 3/TDAT3025 - Applied Machine Learning/: README.md
(+320 files in other folders)
